# HBM-PIMulator

./: HBM2_PIM_config.yaml  all_inst.trace  example.trace  libramulator.dylib
Tracegen/: Hypothesis1.py  Mixtral.py  Model_GEMV.py  function.py  function_test.py  function_v02.py  hypothesis1_2B.trace  hypothesis1_8B.trace  hypothesis1_test.trace  main.py  pim.py  power_calculator.py  test.py  test.trace  trace.trace  trace.txt
Tracegen/Deprecated/: Mixtral.py  main_old.py
src/: main.cpp
src/base/: request.cpp  request.h  type.h
src/dram/: CMakeLists.txt  dram.h  node.h  spec.h
src/dram/impl/: HBM2.cpp
src/dram/lambdas/: action.h  preq.h
src/dram_controller/: CMakeLists.txt
src/dram_controller/impl/: HBM_PIM_controller.cpp
src/frontend/: CMakeLists.txt
src/frontend/impl/memory_trace/: hbmpim_trace.cpp
src/memory_system/: CMakeLists.txt  memory_system.h
src/memory_system/impl/: HBM_PIM_system.cpp
